Custom--app/main/default/objects/Rental_Offer__c/Rental_Offer__c.object-meta.xml
<CustomObject>
    <description>In a future phase of the leasing deployment, this will be used to track changes/approvals related to setting rents and/or rent concessions.</description>
    <label>Rent Change/Approval</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Changes/Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>