Custom--app/main/default/objects/Rental_Offer__c/fields/Accept_Decline_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accept_Decline_Comments__c</fullName>
    <label>Accept/Decline Comments</label>
    <type>TextArea</type>
</CustomField>