Custom--app/main/default/objects/Rental_Offer__c/fields/Applicant_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name_s__c</fullName>
    <label>Applicant Name(s)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>