Custom--app/main/default/objects/Rental_Offer__c/fields/Comp_1__c.field-meta.xml
<CustomField>
    <fullName>Comp_1__c</fullName>
    <label>Comp #1 URL</label>
    <type>Url</type>
</CustomField>