Custom--app/main/default/objects/Rental_Offer__c/fields/Comp_2__c.field-meta.xml
<CustomField>
    <fullName>Comp_2__c</fullName>
    <label>Comp # 2 URL</label>
    <type>Url</type>
</CustomField>