Custom--app/main/default/objects/Rental_Offer__c/fields/Concession_of_Rent__c.field-meta.xml
<CustomField>
    <fullName>Concession_of_Rent__c</fullName>
    <formula>Concession_Value__c / Current_Market_Rent__c</formula>
    <label>Concession % of Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>