Custom--app/main/default/objects/Rental_Offer__c/fields/Counter_Offer__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer__c</fullName>
    <label>Counter Offer</label>
    <type>TextArea</type>
</CustomField>