Custom--app/main/default/objects/Rental_Offer__c/fields/Current_Market_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Market_Rent__c</fullName>
    <label>Current Asking Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>