Custom--app/main/default/objects/Rental_Offer__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>