Custom--app/main/default/objects/Rental_Offer__c/fields/Leads_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Leads_to_Date__c</fullName>
    <formula>Listing__r.Total_Incoming_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Leads to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>