Custom--app/main/default/objects/Rental_Offer__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <label>Listing</label>
    <referenceTo>Listing__c</referenceTo>
    <relationshipName>Rental_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>