Custom--app/main/default/objects/Rental_Offer__c/fields/Number_Apps_to_date__c.field-meta.xml
<CustomField>
    <fullName>Number_Apps_to_date__c</fullName>
    <formula>Listing__r.Total_Apps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Apps to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>