Custom--app/main/default/objects/Rental_Offer__c/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>