Custom--app/main/default/objects/Rental_Offer__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rental Adjustment</fullName>
            </value>
            <value>
                <fullName>Special Adjustment</fullName>
            </value>
            <value>
                <fullName>Rehab Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>