Custom--app/main/default/objects/Rental_Offer__c/fields/Over_Under_Asking_Rent__c.field-meta.xml
<CustomField>
    <fullName>Over_Under_Asking_Rent__c</fullName>
    <formula>Requested_Rent__c  /   Current_Market_Rent__c</formula>
    <label>% Over/Under Asking Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>