Custom--app/main/default/objects/Rental_Offer__c/fields/Price_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Price_Proposed__c</fullName>
    <label>Price Proposed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>