Custom--app/main/default/objects/Rental_Offer__c/fields/Rehab_Request__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Request__c</fullName>
    <label>Rehab Request</label>
    <type>TextArea</type>
</CustomField>