Custom--app/main/default/objects/Rental_Offer__c/fields/Rent_Adj_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Adj_Effective_Date__c</fullName>
    <label>Rent Adj. Effective Date</label>
    <type>Date</type>
</CustomField>