Custom--app/main/default/objects/Rental_Offer__c/fields/Rent_Justification__c.field-meta.xml
<CustomField>
    <fullName>Rent_Justification__c</fullName>
    <label>Rent Justification</label>
    <type>TextArea</type>
</CustomField>