Custom--app/main/default/objects/Rental_Offer__c/fields/Requested_Rent__c.field-meta.xml
<CustomField>
    <fullName>Requested_Rent__c</fullName>
    <label>Requested Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>