Custom--app/main/default/objects/Rental_Offer__c/fields/RP_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RP_Approval_Status__c</fullName>
    <label>RP Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>