Custom--app/main/default/objects/Rental_Offer__c/fields/Showings_to_date__c.field-meta.xml
<CustomField>
    <fullName>Showings_to_date__c</fullName>
    <formula>Listing__r.Total_Showings_C__c</formula>
    <label>Showings to date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>