Custom--app/main/default/objects/Rental_Offer__c/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rental_Changes_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>