Custom--app/main/default/objects/Rental_Offer__c/recordTypes/Offer_Applicant_Concession.recordType-meta.xml
<RecordType>
    <fullName>Offer_Applicant_Concession</fullName>
    <active>true</active>
    <description>Used by listing agents to submit a rental offer or the leasing team to secure concession approval</description>
    <label>Offer / Applicant Concession</label>
</RecordType>