Custom--app/main/default/objects/Rental_Offer__c/recordTypes/Rent_Exception.recordType-meta.xml
<RecordType>
    <fullName>Rent_Exception</fullName>
    <active>true</active>
    <description>Use when the initial asking rent is outside the standard guidelines and requires exception approval</description>
    <label>Asking Rent Exception</label>
</RecordType>