Custom--app/main/default/objects/Rental_Offer__c/recordTypes/Rent_Reduction.recordType-meta.xml
<RecordType>
    <fullName>Rent_Reduction</fullName>
    <active>true</active>
    <description>Use to document/secure approval for any rent reduction</description>
    <label>Rent Reduction</label>
</RecordType>